--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -49,7 +49,9 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(QT_PATH "C:/Qt/Qt5.12.6")
 set(QT_VERSION "5.12.6")
 set(QT_COMPILE_VERSION "mingw73_64")
+set(QT_TOOL_VERSION "mingw730_64")
 # set(QT_COMPILE_VERSION "mingw73_32")
+# set(QT_TOOL_VERSION "mingw730_32")
 
 set(IS_X86 0)
 
@@ -63,7 +65,7 @@ set(CMAKE_PREFIX_PATH "${QT_PATH}/${QT_VERSION}/${QT_COMPILE_VERSION}")
 message(STATUS "CMAKE_PREFIX_PATH=${CMAKE_PREFIX_PATH}")
 
 # Set environment variables
-set(ENV{PATH} "${CMAKE_PREFIX_PATH}/bin;${QT_PATH}/Tools/${QT_COMPILE_VERSION}/bin;%PATH%")
+set(ENV{PATH} "${CMAKE_PREFIX_PATH}/bin;${QT_PATH}/Tools/${QT_TOOL_VERSION}/bin;%PATH%")
 message("PATH=$ENV{PATH}")
 
 {% if template==".qml" -%}
@@ -74,7 +76,7 @@ message("QML2_IMPORT_PATH=$ENV{QML2_IMPORT_PATH}")
 set(ENV{QT_ASSUME_STDERR_HAS_CONSOLE} 1)
 message("QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE}")
 
-message(STATUS "On Clion, you should set QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE};PATH=${CMAKE_PREFIX_PATH}/bin\;${QT_PATH}/Tools/${QT_COMPILE_VERSION}/bin;QML2_IMPORT_PATH=${CMAKE_PREFIX_PATH}/qml")
+message(STATUS "On Clion, you should set QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE};PATH=${CMAKE_PREFIX_PATH}/bin\;${QT_PATH}/Tools/${QT_TOOL_VERSION}/bin;QML2_IMPORT_PATH=${CMAKE_PREFIX_PATH}/qml")
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
