update: use slot and signal for concurrent

--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -102,14 +102,14 @@ add_definitions(-DQT_MESSAGELOGCONTEXT)
 
 # Version & Git
 string(TIMESTAMP BUILD_TIMESTAMP "%Y-%m-%d %H:%M:%S")
-message("BUILD_TIMESTAMP: ${BUILD_TIMESTAMP}")
+message(STATUS "BUILD_TIMESTAMP: ${BUILD_TIMESTAMP}")
 
 set(VERSION_MAJOR 0)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 1)
 set(APP_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
-message("Version is ${APP_VERSION}")
+message(STATUS "APP_VERSION: ${APP_VERSION}")
 
 set(GIT_BRANCH_NAME "")
 set(GIT_COMMIT_HASH "")
