add: generate swagger docs at the same time

--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -97,8 +97,8 @@ message("QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE}")
 message(STATUS "On Clion, you should set QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE};PATH=${CMAKE_PREFIX_PATH}/bin\;${QT_PATH}/Tools/${QT_TOOL_VERSION}/bin;QML2_IMPORT_PATH=${CMAKE_PREFIX_PATH}/qml")
 
 # Enable MESSAGELOGCONTEXT
-set(QT_MESSAGELOGCONTEXT TRUE)
-add_definitions(-DQT_MESSAGELOGCONTEXT)
+#set(QT_MESSAGELOGCONTEXT TRUE)
+#add_definitions(-DQT_MESSAGELOGCONTEXT)
 
 # Version & Git
 string(TIMESTAMP BUILD_TIMESTAMP "%Y-%m-%d %H:%M:%S")
