add: kotlin template

--- a/project_scaffold/templates/kotlin/Makefile
+++ b/project_scaffold/templates/kotlin/Makefile
@@ -1,12 +1,12 @@
-APP_NAME_VERSION := $(shell cd build/libs; ls *.jar)
-APP_NAME := $(shell cd build/libs; ls *.jar | sed -e 's/-.*-all//g')
+APP_NAME = $(shell ls *.iml | sed -e 's/\.iml/.jar/g' | sed -e 's/-.*-all//g')
 
 echo:
-	@echo $(APP_NAME_VERSION)
+	@echo $(shell cd build/libs; ls *.jar)
 	@echo $(APP_NAME)
 
 build-jar:
-	./gradlew.bat shadowJar --status
+	-rm -rf build/libs
+	./gradlew.bat shadowJar #--status
 
 INSTALL_PATH = /bin
 TARGET_PATH = $(INSTALL_PATH)/$(APP_NAME)
@@ -19,19 +19,19 @@ USER_HOST = "$(USER)@$(HOST)"
 SSH_CMD = ssh $(USER_HOST)
 CD_INSTALL_PATH = cd $(INSTALL_PATH)
 
-deploy: deploy-stop deploy-clean build-jar deploy-upload deploy-start
+deploy: deploy-stop deploy-clean deploy-upload deploy-start
 
-deploy-upload:
+deploy-upload: build-jar
 	$(SSH_CMD) "mkdir -p $(INSTALL_PATH)"
-	scp build/libs/$(APP_NAME_VERSION) "$(USER)@$(HOST):$(TARGET_PATH)"
+	scp $(shell ls build/libs/*.jar) "$(USER)@$(HOST):$(TARGET_PATH)"
 	$(SSH_CMD) "chmod +x $(TARGET_PATH)"
 
 deploy-start:
 	$(SSH_CMD) "$(CD_INSTALL_PATH); $(EXPORT); setsid sh -c '/usr/bin/java -jar $(APP_NAME) > /dev/null 2>&1 &'"
-	$(SSH_CMD) "ps ax | grep $(APP_NAME); $(CD_INSTALL_PATH); cat $(APP_NAME).pid"
+	$(SSH_CMD) "ps ax | grep $(APP_NAME)"
 
 deploy-stop:
-	-$(SSH_CMD) "ps ax | grep $(APP_NAME) | grep -v grep | sed -e 's/\s.*//g' | xargs kill"
+	-$(SSH_CMD) "ps ax | grep $(APP_NAME) | grep -v grep | sed 's/^\s*//g' | sed -e 's/\s.*//g' | xargs kill"
 
 deploy-clean:
 	-($(SSH_CMD) "rm $(TARGET_PATH)")
