--- a/project_scaffold/templates/notes/assets/templates/article_settings.yaml
+++ b/project_scaffold/templates/notes/assets/templates/article_settings.yaml
@@ -1,6 +1,5 @@
 tags: [ "{{STUDY_OBJECT}}", "README" ]  # 标签
-series: [ "{{STUDY_OBJECT}} 学习笔记" ]  # 系列
-categories: [ "学习笔记" ]  # 分类
+categories: [ "{{STUDY_OBJECT}} 学习笔记" ]  # 分类
 
 toc: true  # 目录
-draft: false  # 草稿
+draft: true  # 草稿
