--- a/project_scaffold/templates/docker/deploy.yml
+++ b/project_scaffold/templates/docker/deploy.yml
@@ -1,9 +1,9 @@
 disabled: true
 
 servers:
-    openwrt-rpi:
-        host: 192.168.0.10
-        port: "80"
+    openwrt-arm64:
+        host: 192.168.0.16
+        port: "8080"
     ubuntu-amd64:
         host: 192.168.0.18
-        port: "80"
+        port: "8080"
