--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+chardet~=4.0.0
 click~=8.0.4
+click-aliases~=1.0.1
+jinja2~=3.1.2
+lxml~=4.9.0
 pydantic[dotenv]~=1.9.0
 pyyaml~=6.0
+requests~=2.27.1
