--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ click~=8.0.4
 click-aliases~=1.0.1
 jinja2~=3.1.2
 lxml~=4.9.0
+pillow~=9.0.1
 pydantic[dotenv]~=1.9.0
 pyyaml~=6.0
 requests~=2.27.1
