--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ parentdir_prefix =
 
 [flake8]
 ignore = D203,W503
-exclude = .git,__pycache__,build,dist,toolkit/_version.py,versioneer.py
+exclude = .git,__pycache__,build,dist,toolkit/_version.py,versioneer.py,toolkit/template
 per-file-ignores =
     setup.py:E501
 # Match black line-length
@@ -39,6 +39,7 @@ omit =
     setup.py
     versioneer.py
     toolkit/_version.py
+    toolkit/template/*
 
 [mypy]
 files=toolkit-py,test
