add: project module

--- a/toolkit/template/scaffold/project/python/setup.cfg
+++ b/toolkit/template/scaffold/project/python/setup.cfg
@@ -7,14 +7,14 @@ universal = 1
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = toolkit/_version.py
-versionfile_build = toolkit/_version.py
+versionfile_source = {{ project_slug.snake_case }}/_version.py
+versionfile_build = {{ project_slug.snake_case }}/_version.py
 tag_prefix = v
 parentdir_prefix =
 
 [flake8]
 ignore = D203,W503
-exclude = .git,__pycache__,build,dist,toolkit/_version.py,versioneer.py,toolkit/template
+exclude = .git,__pycache__,build,dist,{{ project_slug.snake_case }}/_version.py,versioneer.py
 per-file-ignores =
     setup.py:E501
 # Match black line-length
@@ -23,7 +23,7 @@ extend-ignore =
     E203,
 
 [isort]
-skip = __init__.py,toolkit/template
+skip = __init__.py
 profile = black
 skip_gitignore = True
 multi_line_output=3
@@ -38,8 +38,7 @@ omit =
     main.py
     setup.py
     versioneer.py
-    toolkit/_version.py
-    toolkit/template/*
+    {{ project_slug.snake_case }}/_version.py
 
 [tool:pytest]
 testpaths=tests/
