fix: install 7zip

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        sudo apt-get install -y p7zip-full p7zip-rar
         python -m pip install --upgrade pip flake8 pytest pytest-cov
         pip install -i https://pypi.douban.com/simple -r requirements.txt
         pip install -i https://pypi.douban.com/simple -r requirements-dev.txt
