--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y p7zip-full p7zip-rar
-        python -m pip install --upgrade pip flake8 pytest pytest-cov
-        pip install -i https://pypi.douban.com/simple -r requirements.txt
-        pip install -i https://pypi.douban.com/simple -r requirements-dev.txt
+        python -m pip install --upgrade pip
+        pip install -i -r requirements.txt
+        pip install -i -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         flake8 .
