--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,8 +22,8 @@ jobs:
       run: |
         sudo apt-get install -y p7zip-full p7zip-rar
         python -m pip install --upgrade pip
-        pip install -i -r requirements.txt
-        pip install -i -r requirements-dev.txt
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         flake8 .
