--- a/toolkit/template/scaffold/project/python/package/.github/workflows/python-test.yml
+++ b/toolkit/template/scaffold/project/python/package/.github/workflows/python-test.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -i -r requirements.txt
-        pip install -i -r requirements-dev.txt
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
     - name: Lint with flake8
       run: |
         flake8 .
