update: GitHub actions dependencies

--- a/toolkit/template/scaffold/project/python/package/Makefile
+++ b/toolkit/template/scaffold/project/python/package/Makefile
@@ -79,6 +79,7 @@ clean-test: ## remove test and coverage artifacts
 	rm -f coverage.xml
 	rm -fr htmlcov/
 	rm -fr .pytest_cache/
+	-rm -fr junit/
 
 release: dist ## package and upload a release
 	twine upload dist/*
@@ -108,3 +109,9 @@ init: ## initialize a new project
 	git init
 	versioneer install
 	pre-commit install
+
+push-tags: ## push all tags to the repository
+	git push origin --tags
+
+latest-tag: ## print the latest tag
+	@git describe --tags --abbrev=0
