--- a/toolkit/template/scaffold/project/python/package/MANIFEST.in
+++ b/toolkit/template/scaffold/project/python/package/MANIFEST.in
@@ -3,6 +3,9 @@ include HISTORY.md
 include LICENSE
 include README.md
 
+include requirements.txt
+include requirements-dev.txt
+
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
