add: use multiple templates at the same time, ansible, golang

--- a/toolkit/template/scaffold/project/python/prefect/.drone.yml
+++ b/toolkit/template/scaffold/project/python/prefect/.drone.yml
@@ -39,4 +39,4 @@ steps:
       - pip install -i https://pypi.douban.com/simple -r requirements-dev.txt
       - pytest tests
       - pip install .
-      - python register.py
+      - {{ project_slug.snake_case }} register
