fix: KeyError when deleting `factory` field

--- a/toolkit/template/scaffold/project/ansible/requirements.yml
+++ b/toolkit/template/scaffold/project/ansible/requirements.yml
@@ -1,5 +1,10 @@
 ---
 roles:
+  - name: geerlingguy.ansible
   - name: geerlingguy.docker
-  - name: geerlingguy.pip
+  - name: geerlingguy.firewall
   - name: geerlingguy.java
+  - name: geerlingguy.jenkins
+  - name: geerlingguy.kubernetes
+  - name: geerlingguy.pip
+  - name: geerlingguy.swap
