--- a/toolkit/template/scaffold/project/python/package/pytest.ini
+++ b/toolkit/template/scaffold/project/python/package/pytest.ini
@@ -3,3 +3,6 @@ log_cli=true
 log_level=DEBUG
 testpaths = tests/
 addopts = -p no:warnings --doctest-modules --junitxml=junit/test-results.xml --cov=. --cov-report=xml --cov-report=html
+filterwarnings =
+    ignore::UserWarning
+    ignore::DeprecationWarning
