--- a/toolkit/template/scaffold/project/python/package/pyproject.toml
+++ b/toolkit/template/scaffold/project/python/package/pyproject.toml
@@ -1,4 +1,20 @@
 [tool.black]
+color = true
+exclude = '''
+/(
+    \.git
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+    | env
+    | venv
+)/
+'''
 extend-exclude = '''
 /(
   | tests/data
