--- a/toolkit/template/scaffold/project/ansible/vars/main.yaml
+++ b/toolkit/template/scaffold/project/ansible/vars/main.yaml
@@ -1,5 +1,8 @@
 ---
-screen_id: {{ screen_id }}
-install_location: {{ install_location }}
-executable_file: {{ executable_file }}
+assets_directory: {{ assets_directory }}
 config_file: {{ config_file }}
+executable_file: {{ executable_file }}
+http_port: 8080
+install_location: {{ install_location }}
+screen_id: {{ screen_id }}
+start_command: {{ start_command }}
